modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   sass/_base.scss 	modified:   sass/_colors.scss 	modified:   sass/_inputfields.scss

--- a/example.html
+++ b/example.html
@@ -92,7 +92,8 @@
 								<option>Option 3</option>
 							</optgroup>
 						</select>
-						<span class="inputLabel">Date&time field</span>
+						<span class="inputLabel">select field</span>
+						<span class="selectHint"></span>
 					</label>
 				</div>
 			</fieldset>
@@ -102,11 +103,11 @@
 			<fieldset>
 				<legend>Login form</legend>
 				<label>
-					<input type="text" placeholder="Username">
+					<input type="text" placeholder="Username" required>
 					<span class="inputLabel">Username</span>
 				</label>
 				<label>
-					<input type="password" placeholder="Password">
+					<input type="password" placeholder="Password" required>
 					<span class="inputLabel">Password</span>
 				</label>
 				<div class="text-right">
@@ -155,10 +156,10 @@
 			</button>
 		</div>
 		<hr>
-		<div class="p10">
-			<table>
+		<div class="p10 cols2">
+			<table class="shadow4">
 				<caption>
-					The table caption
+					Normal table
 				</caption>
 				<thead>
 					<tr>
@@ -182,6 +183,56 @@
 						<td contenteditable="true">data4</td>
 					</tr>
 					<tr>
+						<td contenteditable="true">data1</td>
+						<td contenteditable="true">data2</td>
+						<td contenteditable="true">data3</td>
+						<td contenteditable="true">data4</td>
+					</tr>
+					<tr>
+						<td contenteditable="true">data1</td>
+						<td contenteditable="true">data2</td>
+						<td contenteditable="true">data3</td>
+						<td contenteditable="true">data4</td>
+					</tr>
+				</tbody>
+			</table>
+			<table class="pivot shadow4">
+				<caption>
+					Pivot table
+				</caption>
+				<thead>
+					<tr>
+						<th></th>
+						<th>Column 1</th>
+						<th>Column 2</th>
+						<th>Column 3</th>
+						<th>Column 4</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Row 1</td>
+						<td contenteditable="true">data1</td>
+						<td contenteditable="true">data2</td>
+						<td contenteditable="true">data3</td>
+						<td contenteditable="true">data4</td>
+					</tr>
+					<tr>
+						<td>Row 2</td>
+						<td contenteditable="true">data1</td>
+						<td contenteditable="true">data2</td>
+						<td contenteditable="true">data3</td>
+						<td contenteditable="true">data4</td>
+					</tr>
+					<tr>
+						<td>Row 3</td>
+						<td contenteditable="true">data1</td>
+						<td contenteditable="true">data2</td>
+						<td contenteditable="true">data3</td>
+						<td contenteditable="true">data4</td>
+					</tr>
+					<tr>
+						<td>Row 4</td>
 						<td contenteditable="true">data1</td>
 						<td contenteditable="true">data2</td>
 						<td contenteditable="true">data3</td>
