modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   sass/_inputfields.scss

--- a/example.html
+++ b/example.html
@@ -43,7 +43,8 @@
 						<input type="email" placeholder="Email field">
 						<span class="inputLabel">Email field</span>
 					</label>
-					<label>
+					<label class="tagLeft">
+						<div>☎</div>
 						<input type="tel" placeholder="Phone field">
 						<span class="inputLabel">Phone field</span>
 					</label>
