modified:   example.html 	modified:   jammer.css 	modified:   jammer.css.map 	modified:   sass/_base.scss 	modified:   sass/_components.scss 	modified:   sass/_helpers.scss 	modified:   sass/_inputfields.scss

--- a/example.html
+++ b/example.html
@@ -29,6 +29,7 @@
 			<small>small text</small>
 			<sup>sup</sup>
 			<sub>sub</sub>
+			<code>code</code>
 		</article>
 		<hr>
 		<form>
@@ -39,7 +40,8 @@
 						<input type="text" placeholder="Text field">
 						<span class="inputLabel">Text field</span>
 					</label>
-					<label>
+					<label class="tagLeft">
+						<div>✉</div>
 						<input type="email" placeholder="Email field">
 						<span class="inputLabel">Email field</span>
 					</label>
@@ -48,9 +50,10 @@
 						<input type="tel" placeholder="Phone field">
 						<span class="inputLabel">Phone field</span>
 					</label>
-					<label>
+					<label class="tagRight">
 						<input type="number" placeholder="Number field">
 						<span class="inputLabel">Number field</span>
+						<div>#</div>
 					</label>
 					<label>
 						<input type="number" class="no-buttons" placeholder="Number field without spin buttons">
